fixed interview stub right spacing

--- a/mit_civic/citi_digits/static/css/main.css
+++ b/mit_civic/citi_digits/static/css/main.css
@@ -883,6 +883,7 @@ background-color: #EECAE5;
     background-color: #ffffff;
     border-radius: 5px;
     margin-top: 1%;
+    margin-right: 2%;
 }
 
 #interviews-tab #interview-content img.interviewee-photo{
